# WFiIS-OOP-4th-semester

./: README.md  create.sh
Lab1/: CMakeLists.txt
Lab1/include/: Kolo.h  Ksztalt.h  Kwadrat.h  Trojkat.h
Lab1/src/: Kolo.cpp  Ksztalt.cpp  Kwadrat.cpp  Trojkat.cpp
Lab10/: Pojazdy.h  Predkosc.h
Lab11/: Farma.h  Zwierz.h
Lab12/: Loudy.cpp  Loudy.h
Lab13/: Calc_error.cpp  Calc_error.h  LicznikPoziomow.h
Lab14/: NicePrinter.h  SetHoldRet.h
Lab15/: list.h
Lab2/: CMakeLists.txt
Lab2/include/: InfoClass.h  InfoSmartPtr.h  InfoSuperClass.h
Lab2/src/: InfoClass.cpp  InfoSmartPtr.cpp  InfoSuperClass.cpp
Lab3/: CMakeLists.txt
Lab3/include/: Malenstwo.h  MalenstwoSamoSprzatacz.h  ZbieraczMalenstw.h
Lab3/src/: Malenstwo.cpp  MalenstwoSamoSprzatacz.cpp  ZbieraczMalenstw.cpp
Lab4/: CMakeLists.txt
Lab4/include/: BitArray.h  BitGetter.h
Lab4/src/: BitArray.cpp  BitGetter.cpp
Lab5/: CMakeLists.txt
Lab5/include/: ListaString.h  MaszynaStanow.h  Stan.h  StanyBazowe.h
Lab5/src/: ListaString.cpp  MaszynaStanow.cpp  Stan.cpp
Lab6/: Elementarne.cpp  Elementarne.h  FZlozona.cpp  FZlozona.h  Fun.h  ProstaRozniczka.cpp  ProstaRozniczka.h  main.cpp
Lab7/: ArithmeticMean.cpp  ArithmeticMean.h  HarmonicMean.cpp  HarmonicMean.h  Mean.cpp  Mean.h
Lab8/: MyDir.cpp  MyDir.h  MyFile.cpp  MyFile.h  MyItem.cpp  MyItem.h  MyUnique.cpp  MyUnique.h
Lab9/: Attributes.h  MyLine.h  MyPrintable.h  MyPrinter.cpp  MyText.cpp  MyText.h
